fix(builder): stretch and center .char-symbol boxes

--- a/builder/styles.css
+++ b/builder/styles.css
@@ -26,6 +26,10 @@
 .char-symbol {
     border-bottom: 1px solid black;
     font-size: 3rem;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .char-mapped-value {
     font-size: 1.2rem;
